fix some spacing

--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ a {
 }
 
 .bottom-heart {
-  bottom: 50px;
+  bottom: 45px;
 }
 
 .dot-sexy {
@@ -99,7 +99,7 @@ a {
   font-family: 'Dosis';
   color: #1B70B6;
   font-weight: normal;
-  margin-bottom: -28px;
+  margin-bottom: -32px;
 }
 
 .caro .bae-site {
